--- a/Ameba_Search_Repeat_with_CSS_2.7
+++ b/Ameba_Search_Repeat_with_CSS_2.7
@@ -7,6 +7,8 @@
 // @match        https://search.ameba.jp/search/entry/*.html?aid=*
 // @run-at        document-start
 // @grant        none
+// @updateURL        https://github.com/personwritep/Ameba_Search_Repeat_with_CSS/raw/main/Ameba_Search_Repeat_with_CSS.user.js
+// @downloadURL        https://github.com/personwritep/Ameba_Search_Repeat_with_CSS/raw/main/Ameba_Search_Repeat_with_CSS.user.js
 // ==/UserScript==
 
 
